--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ show_error_context = True
 warn_unused_configs = True
 warn_redundant_casts = True
 
-[mypy-src]
+[mypy-src,mypy-app]
 disallow_untyped_defs = True
 disallow_incomplete_defs = True
 
